# Final-project-

./: Diagram.drawio  README.md
00-Server/Server_3/: CMakeLists.txt  main.cpp  server.cpp  server.h  server.h.cpp
00-Server/build-Server_3-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  customer_data.txt
00-Server/build-Server_3-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/Server_3_autogen/: moc_predefs.h
00-Server/build-Server_3-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/Server_3_autogen/EWIEGA46WW/: moc_server.cpp
01-Client/NetWork/: CMakeLists.txt  client.cpp  client.h  client2.cpp  client2.h  main.cpp  manger_client.cpp  manger_client.h
01-Client/build-NetWork-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
01-Client/build-NetWork-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/NetWork_autogen/EWIEGA46WW/: moc_client.cpp  moc_manger_client.cpp
